--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ ACCESS_TOKEN_SECRATE = sdgfdddDFXHRG_RRR62-3445QFGCFD56RTET4_7872tf-yTYDOOIJLKYT
 ACCESS_TOKEN_EXPIRY = 1d
 REFRESH_TOKEN_SECRATE = jkHIUY74ihi98_EIUHJh78EGS-DHZXBZYEW_E8W8Ebsh6JKG87jhhbj87yihgvtaTygb
 REFRESH_TOKEN_EXPIRY = 10d
+
+CLOUDINARY_CLOUD_NAME = dxdc09msw
+CLOUDINARY_API_KEY = 681833913561573
+CLOUDINARY_API_SECRET = US_MFxryJ3YyZ52tg76jLje-bXQ
